--- a/packages/workspaces-ui-core/assets/css/goldenlayout-base.css
+++ b/packages/workspaces-ui-core/assets/css/goldenlayout-base.css
@@ -159,6 +159,15 @@ ul {
 .lm_tab.lm_active:hover::before {
   transform: translateX(0);
 }
+.lm_tab.lm_pinned {
+  flex-basis: 0%;
+  flex-grow: 0;
+  padding: 0 0 0 0.168rem;
+  min-width: 1.5rem;
+}
+.lm_tab.lm_pinned .lm_iconButton {
+  margin: 0;
+}
 .lm_tab i {
   position: absolute;
   top: 0;
@@ -344,8 +353,8 @@ ul {
   transform: rotate(-45deg);
 }
 .lm_close_tab,
-.lm_saveButton {
-  display: flex;
+.lm_saveButton,
+.lm_iconButton {
   align-items: center;
   justify-content: center;
   width: 1.25rem;
@@ -355,10 +364,20 @@ ul {
   transition: all 0.3s ease;
 }
 .lm_saveButton {
+  display: flex;
   margin-right: 6px;
 }
 .lm_saveButton::before {
   mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' viewBox='0 0 512 512' style='enable-background:new 0 0 512 512;' xml:space='preserve'%3E%3Cpath d='M489.5,0H22.5C9.7,0,0,9.7,0,22.5v466.9C0,502.3,9.7,512,22.5,512h466.9c12.8,0,22.5-9.7,22.5-22.5V22.5 C512,9.7,502.3,0,489.5,0L489.5,0z M32.3,480.3V159.7h207.9v320.5C240.1,480.3,32.3,480.3,32.3,480.3z M480.3,480.3h-192V159.7h192 V480.3z M480.3,128h-448V31.7h448V128z'/%3E%3C/svg%3E%0A");
+  width: 12px;
+  height: 12px;
+  content: "";
+}
+.lm_iconButton {
+  display: none;
+  margin-right: 6px;
+}
+.lm_iconButton .lm_iconButtonContent {
   width: 12px;
   height: 12px;
   content: "";
@@ -375,6 +394,7 @@ ul {
   content: "";
 }
 .lm_close_tab {
+  display: flex;
   position: absolute;
   right: 6px;
 }
